tests/paczka1/small_fuzzy/82965155.err
Error in line 2: LFeanPX S627 21,4
Error in line 4: LFeanPX S575 87,1
Error in line 1: WoPHprdS S982 65,6
Error in line 5: LFeanPX S982 83,1
